--- a/src/fastapi/Dockerfile
+++ b/src/fastapi/Dockerfile
@@ -6,6 +6,8 @@ COPY . .
 
 RUN pip install --no-cache-dir -r Requirements.txt
 
+ENV PYTHONPATH=/app
+
 EXPOSE 8080
 
 CMD ["sh", "-c", "uvicorn src.fastapi.app.main:app --host 0.0.0.0 --port $PORT"]
