--- a/src/fastapi/Dockerfile
+++ b/src/fastapi/Dockerfile
@@ -7,7 +7,8 @@ COPY . .
 RUN pip install --no-cache-dir -r Requirements.txt
 
 ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8080
 
-CMD ["sh", "-c", "uvicorn src.fastapi.app.main:app --host 0.0.0.0 --port $PORT"]
+CMD ["sh", "-c", "uvicorn src.fastapi.app.main:app --app-dir /app --host 0.0.0.0 --port $PORT"]
