Changed the source path of app

--- a/src/fastapi/Dockerfile
+++ b/src/fastapi/Dockerfile
@@ -4,11 +4,10 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install --no-cache-dir -r Requirements.txt
+RUN pip install --no-cache-dir -r src/fastapi/Requirements.txt
 
-ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8080
 
-CMD ["sh", "-c", "uvicorn src.fastapi.app.main:app --app-dir /app --host 0.0.0.0 --port $PORT"]
+CMD ["sh", "-c", "uvicorn app.main:app --app-dir src/fastapi --host 0.0.0.0 --port $PORT"]
