--- a/src/fastapi/Dockerfile
+++ b/src/fastapi/Dockerfile
@@ -6,8 +6,9 @@ COPY . .
 
 RUN pip install --no-cache-dir -r Requirements.txt
 
+ENV PYTHONPATH=/app/src/fastapi
 ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8080
 
-CMD ["sh", "-c", "uvicorn app.main:app --app-dir src/fastapi --host 0.0.0.0 --port $PORT"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port $PORT"]
